# inverse-kinetics-opengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
